# SpliitApi

./: .env.example  README.md  main.py  pyproject.toml
src/spliit/: __init__.py  client.py  utils.py
