[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spliit"
version = "0.1.0"
description = "A Python client for the Spliit API"
requires-python = ">=3.7"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "mypy>=0.900",
]
